finish line chart and every 5 seconds update data.

--- a/YSJViewer/Base.lproj/Main.storyboard
+++ b/YSJViewer/Base.lproj/Main.storyboard
@@ -2354,27 +2354,6 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
             </objects>
             <point key="canvasLocation" x="4362" y="1"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="5qa-7w-MYo">
-            <objects>
-                <viewController id="Yp4-S4-KK2" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="2ps-ij-FLa"/>
-                        <viewControllerLayoutGuide type="bottom" id="VAy-IT-wTr"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="sXs-kZ-68y">
-                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="roY-jo-0B6"/>
-                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="xUT-n1-spk" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3902" y="548"/>
-        </scene>
         <!--Service Time - 服务时间-->
         <scene sceneID="1RO-m0-EPI">
             <objects>
@@ -2533,7 +2512,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="tRw-ve-0oR"/>
         <segue reference="Cvt-BV-AZC"/>
+        <segue reference="0el-8L-qHP"/>
     </inferredMetricsTieBreakers>
 </document>
