--- a/YSJViewer/Alarm_LineChart.storyboard
+++ b/YSJViewer/Alarm_LineChart.storyboard
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vCP-nu-oQc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vCP-nu-oQc">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
-        <!--Real Time Data Line Chart - 曲线图-->
+        <!--Alarm Line Chart - 曲线图-->
         <scene sceneID="lbx-tj-Y5H">
             <objects>
-                <viewController storyboardIdentifier="RTD_LineChart" id="qSO-j4-cW8" customClass="RealTimeData_LineChart" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Alarm_LineChart" id="qSO-j4-cW8" customClass="Alarm_LineChart" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Kzs-Zl-1DE"/>
                         <viewControllerLayoutGuide type="bottom" id="rHe-cz-5ZS"/>
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n50-lI-wSf">
-                                <rect key="frame" x="153" y="60" width="262" height="17"/>
+                                <rect key="frame" x="153" y="65" width="262" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
