--- a/YSJViewer/InputServerAddress.storyboard
+++ b/YSJViewer/InputServerAddress.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="23W-xD-hdY">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="23W-xD-hdY">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
-        <!--Input Server Address - 服务器IP地址-->
+        <!--Input Server Address - 服务器信息-->
         <scene sceneID="acG-Sc-exE">
             <objects>
                 <viewController id="OJ1-Ye-y34" customClass="InputServerAddress" sceneMemberID="viewController">
@@ -35,7 +35,7 @@
                                 <rect key="frame" x="95" y="80" width="131" height="131"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="请输入服务器IP地址" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="YWC-sA-FsL">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="请输入服务器域名或IP地址" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="YWC-sA-FsL">
                                 <rect key="frame" x="53" y="235" width="215" height="36"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
@@ -45,7 +45,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="服务器IP地址" id="Q5E-pO-9zJ"/>
+                    <navigationItem key="navigationItem" title="服务器信息" id="Q5E-pO-9zJ"/>
                     <connections>
                         <outlet property="imgBG" destination="kam-WS-pYV" id="Klx-La-Kwi"/>
                         <outlet property="txtServerAddress" destination="YWC-sA-FsL" id="HWX-ML-qCy"/>
@@ -55,10 +55,10 @@
             </objects>
             <point key="canvasLocation" x="-929" y="-341"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Nav Login-->
         <scene sceneID="pDD-Ub-vqN">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="23W-xD-hdY" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="23W-xD-hdY" customClass="NavLogin" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="dMv-ND-8Be">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
